[package]
name = "butter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
itertools = "0.10"
lazy_static = "1.4"
pest = "2.0"
pest_derive = "2.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"